@@ -15,6 +15,7 @@
 package com.suse.manager.webui.services.impl.test;
 
 import com.redhat.rhn.common.conf.Config;
+import com.redhat.rhn.domain.server.ServerPath;
 import com.redhat.rhn.testing.JMockBaseTestCaseWithUser;
 
 import com.suse.manager.webui.services.impl.SaltSSHService;
@@ -23,7 +24,9 @@ import org.jmock.imposters.ByteBuddyClassImposteriser;
 
 import java.util.Arrays;
 import java.util.Collections;
+import java.util.List;
 import java.util.Optional;
+import java.util.Set;
 
 /**
  * Tests for SaltSSHService.
@@ -44,7 +47,7 @@ public class SaltSSHServiceTest extends JMockBaseTestCaseWithUser {
     }
 
     public void testProxyCommandSSHPush1Proxy() {
-        Optional<String> res = SaltSSHService.sshProxyCommandOption(Arrays.asList("proxy1"), "ssh-push", "minion");
+        Optional<String> res = SaltSSHService.sshProxyCommandOption(List.of("proxy1"), "ssh-push", "minion");
         assertTrue(res.isPresent());
         assertEquals(
                 "ProxyCommand='" +
@@ -55,7 +58,7 @@ public class SaltSSHServiceTest extends JMockBaseTestCaseWithUser {
 
     public void testProxyCommandSSHPushTunnel1Proxy() {
         Optional<String> res = SaltSSHService.sshProxyCommandOption(
-                Arrays.asList("proxy1"), "ssh-push-tunnel", "minion");
+                List.of("proxy1"), "ssh-push-tunnel", "minion");
         assertTrue(res.isPresent());
         assertEquals(
                 "ProxyCommand='" +
@@ -96,5 +99,25 @@ public class SaltSSHServiceTest extends JMockBaseTestCaseWithUser {
                         "ssh -i /home/mgruser/.ssh/mgr_own_id -W minion:22 -o StrictHostKeyChecking=no " +
                         "-o User=mgruser minion'",
                 res.get());
+    }
+
+    public void testProxyPathToHostnames() {
+        final Set<ServerPath> serverPaths = Set.of(
+                new ServerPath(1L, "rhn"),
+                new ServerPath(0L, "junit"),
+                new ServerPath(2L, "test")
+        );
+
+        assertEquals(List.of("test", "rhn", "junit", "unitTest"),
+                SaltSSHService.proxyPathToHostnames(serverPaths, Optional.of("unitTest")));
+
+        assertEquals(List.of("unitTest"),
+                SaltSSHService.proxyPathToHostnames(Collections.emptySet(), Optional.of("unitTest")));
+
+        assertEquals(List.of("test", "rhn", "junit"),
+                SaltSSHService.proxyPathToHostnames(serverPaths, Optional.empty()));
+
+        assertEquals(Collections.emptyList(),
+                SaltSSHService.proxyPathToHostnames(Collections.emptySet(), Optional.empty()));
     }
 }
